- Fixed bug #44257 (timelib_tz_lookup_table must use float for gmtoffset).